# randomCode

./: .gitignore  README.md
Docker/: Dockerfile  package.json
Docker/src/: index.js
backend/: docker-compose.yml  package.json
backend/server/: index.js
cpp/: .gitignore
cpp/Benchmark/: .gitignore  CMakeLists.txt
cpp/Benchmark/src/: main.cpp
cpp/Factorial/: recursion.cpp
cpp/LifeTimeOfObject/: main.cpp
cpp/Most_vexing_parse/: main.cpp  using_name.cpp
cpp/StringVectorArrays/: usingArray.cpp  usingNameSpace.cpp  usingString.cpp  usingVector.cpp
cpp/allocator/: main.cpp
cpp/boost_IPC/: CMakeLists.txt
cpp/boost_IPC/memory_creator/: CMakeLists.txt
cpp/boost_IPC/memory_reader/: CMakeLists.txt  main.cpp
cpp/built_type/: main.cpp
cpp/classes/: Sales_data.cpp  Sales_data.h  main.cpp  screen.cpp  screen.h  window_manager.h
cpp/concurrency/: Thread.cpp  async_buffer.cpp  atomic.cpp  condition_variable.cpp  dead_lock.cpp  future.cpp  multiple_j_thread.cpp  multiple_threads.cpp  mutex.cpp  try_lock.cpp
cpp/copy_control/: Folder.cpp  Folder.h  Message.cpp  Message.h  StrVec.h  main.cpp  main.h
cpp/debug/: main.cpp
cpp/dynamic_memory/: StrBlob.cpp  StrBlob.h  free_dangling_ptr.cpp  main.cpp  shared_ptr_vs_new.cpp  smart_ptr_and_new.cpp  unique_ptr.h  unique_ptr_usecase_custom.cpp  unique_ptr_usecase_std.cpp  weak_ptr.cpp
cpp/event_driven/: .gitignore  CMakeLists.txt  Event.h  Simulation.cpp  Simulation.h  StoreSimulation.cpp  StoreSimulation.h  main.cpp
cpp/exception/: Base.h  exception.h  main.cpp
cpp/expression/: usingPostfixPrefix.cpp
cpp/function/: main.cpp  mainArgument.cpp  pointerInit.cpp  usingFunction.h  (+1 more)
cpp/networking/: CMakeLists.txt
cpp/networking/client/: CMakeLists.txt
cpp/networking/client_build/: CMakeLists.txt
cpp/networking/server/: CMakeLists.txt
cpp/networking/server_build/: CMakeLists.txt
cpp/networking/src/: main.cpp
nodeSpawn/: index.js
react_in_x_min/: package-lock.json
(+163 files in other folders)
